k8s_manifests/opc_interface/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: opc_interface
    app.kubernetes.io/part-of: ziak
  name: opc_interface
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: opc_interface
  type: ClusterIP
