k8s_manifests/opc_interface/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '120'
  name: opc_interface
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: opc_interface
            port:
              name: http
        path: /opc_interface
        pathType: Prefix
